--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -2,7 +2,7 @@ CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = ex00
 
-SRCS = Animal.cpp Cat.cpp Dog.cpp main.cpp 
+SRCS = Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp main.cpp 
 
 OBJS = $(SRCS:.cpp=.o)
 
