ex01 finished && ex00 fixed

--- a/cpp05/ex01/Makefile
+++ b/cpp05/ex01/Makefile
@@ -1,8 +1,8 @@
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME = ex00
+NAME = ex01
 
-SRCS = Bureaucrat.cpp main.cpp
+SRCS = Bureaucrat.cpp Form.cpp main.cpp 
 
 OBJS = $(SRCS:.cpp=.o)
 
