--- a/cpp08/ex01/Makefile
+++ b/cpp08/ex01/Makefile
@@ -1,8 +1,8 @@
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME = easyfind
+NAME = span
 
-SRCS = main.cpp   
+SRCS = main.cpp Span.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
