--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -1,5 +1,5 @@
 CC = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -g3
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -g3 -fsanitize=address
 NAME = PmergeMe
 
 SRCS = PmergeMe.cpp main.cpp     
