remove -g flag at ex01/makefile && add ac < 2 statement at ex02/main.cpp

--- a/cpp09/ex01/Makefile
+++ b/cpp09/ex01/Makefile
@@ -1,5 +1,5 @@
 CC = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -g3
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = RPN
 
 SRCS = RPN.cpp main.cpp     
